force-app/main/default/objects/Lineage_Tree__c/Lineage_Tree__c.object-meta.xml
<CustomObject>
    <label>Lineage Tree</label>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Lineage Tree</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lineage Trees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>