force-app/main/default/objects/Lineage_Tree__c/fields/cGTV_ID__c.field-meta.xml
<CustomField>
    <fullName>cGTV_ID__c</fullName>
    <formula>Child_Lineage__r.GTV_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cGTV ID</label>
    <type>Text</type>
</CustomField>