force-app/main/default/objects/Lineage_Tree__c/fields/Child_Lineage__c.field-meta.xml
<CustomField>
    <fullName>Child_Lineage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Lineage</label>
    <referenceTo>Lineage__c</referenceTo>
    <relationshipLabel>Parent Tree</relationshipLabel>
    <relationshipName>Lineage_Trees1</relationshipName>
    <type>Lookup</type>
</CustomField>