force-app/main/default/objects/Lineage_Tree__c/fields/cVariety_Description__c.field-meta.xml
<CustomField>
    <fullName>cVariety_Description__c</fullName>
    <formula>Child_Lineage__r.Variety_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cVariety Description</label>
    <type>Text</type>
</CustomField>