force-app/main/default/objects/Lineage_Tree__c/fields/cVariety_Name__c.field-meta.xml
<CustomField>
    <fullName>cVariety_Name__c</fullName>
    <formula>Child_Lineage__r.Variety_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cVariety Name</label>
    <type>Text</type>
</CustomField>