force-app/main/default/objects/Lineage_Tree__c/fields/Parent_Lineage__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lineage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Lineage</label>
    <referenceTo>Lineage__c</referenceTo>
    <relationshipLabel>Child Tree</relationshipLabel>
    <relationshipName>Lineage_Trees</relationshipName>
    <type>Lookup</type>
</CustomField>