force-app/main/default/objects/Lineage_Tree__c/fields/pGTV_ID__c.field-meta.xml
<CustomField>
    <fullName>pGTV_ID__c</fullName>
    <formula>Parent_Lineage__r.GTV_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pGTV ID</label>
    <type>Text</type>
</CustomField>