force-app/main/default/objects/Lineage_Tree__c/fields/pVariety_Description__c.field-meta.xml
<CustomField>
    <fullName>pVariety_Description__c</fullName>
    <formula>Parent_Lineage__r.Variety_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pVariety Description</label>
    <type>Text</type>
</CustomField>