force-app/main/default/objects/Lineage_Tree__c/fields/pVariety_Name__c.field-meta.xml
<CustomField>
    <fullName>pVariety_Name__c</fullName>
    <formula>Parent_Lineage__r.Variety_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pVariety Name</label>
    <type>Text</type>
</CustomField>